# agent-skills-demo

./: .gitignore  README.md  app.py  app.yaml  app.yml  databricks.yml  example.env  main.py  mlflow.db  pyproject.toml  requirements.txt  start_server.py
.claude/skills/docx/: SKILL.md
.claude/skills/pdf/: SKILL.md
agent/: __init__.py  config.py  graph.py  responses_agent.py  tools.py
mlruns/0/models/m-f3d901fa154f44019e2cbf1e1f24401d/artifacts/: MLmodel
src/agent/: __init__.py  config.py  graph.py  nodes.py  responses_agent.py  tools.py
static/: index.html
